[package]
name = "exshape_shape"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "exshape_shape"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = { git = "https://github.com/rjmac/rustler", rev="1f5b4d02e94ff9d7c316f5393008bdfcfd95ffb5" }
rustler_codegen = { git = "https://github.com/rjmac/rustler", rev="1f5b4d02e94ff9d7c316f5393008bdfcfd95ffb5" }
itertools = "0.10"
derivative = "2.1"
float_extras = "0.1"
